# ClickHouse

./: CMakeLists.txt
cmake/find/: hive-metastore.cmake
contrib/: CMakeLists.txt
contrib/hive-metastore/: .gitmodules  CMakeLists.txt
contrib/hive-metastore/if/: README.md  fb303.thrift  hive_metastore.thrift
contrib/hive-metastore/if/gen-cpp/: FacebookService.cpp  FacebookService.h  FacebookService_server.skeleton.cpp  ThriftHiveMetastore.cpp  ThriftHiveMetastore.h  ThriftHiveMetastore_server.skeleton.cpp  fb303_types.cpp  fb303_types.h  hive_metastore_constants.cpp  hive_metastore_constants.h  hive_metastore_types.cpp  hive_metastore_types.h
contrib/hive-metastore/if2/gen-cpp/: ThriftHiveMetastore_server.skeleton.cpp
contrib/hive-metastore/src/metastore/: HiveMetastoreCommon.cpp  HiveMetastoreCommon.h
src/: CMakeLists.txt
src/Core/: Settings.h
src/Databases/: DatabaseRemote.cpp  DatabaseRemote.h
src/IO/: HDFSCommon.cpp  HDFSCommon.h  ReadBufferFromHDFS.cpp  ReadBufferFromHDFS.h  WriteBufferFromHDFS.cpp  WriteBufferFromHDFS.h
src/Storages/: StorageHDFS.cpp  StorageHDFS.h  registerStorages.cpp
src/Storages/Hive/: HiveBlockOutputStream.cpp  HiveBlockOutputStream.h  HiveSettings.cpp  HiveSettings.h  README  StorageHive.cpp  StorageHive.h
src/TableFunctions/: TableFunctionHive.cpp  TableFunctionHive.h  registerTableFunctions.cpp  registerTableFunctions.h
